[gd_scene load_steps=9 format=2]

[ext_resource path="res://original_assets/lobby/shapes/5.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/75_OCR A Extended.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/player_list_row.gd" type="Script" id=3]
[ext_resource path="res://original_assets/lobby/sounds/431_tick05.wav" type="AudioStream" id=4]
[ext_resource path="res://original_assets/lobby/sounds/428_Login_01.wav" type="AudioStream" id=5]
[ext_resource path="res://original_assets/lobby/sounds/429_Login_02.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="PlayerListRow" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 842.0
margin_bottom = 74.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ChallengeIssuedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ChallengeReceivedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BG" type="ColorRect" parent="."]
visible = false
margin_right = 842.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 842.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 74.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 74 )
custom_styles/panel = SubResource( 2 )

[node name="Dot" type="TextureRect" parent="HBoxContainer/DotContainer"]
margin_right = 74.0
margin_bottom = 74.0
texture = ExtResource( 1 )
expand = true

[node name="UsernameLabel" type="Label" parent="HBoxContainer"]
margin_left = 78.0
margin_top = 10.0
margin_right = 402.0
margin_bottom = 63.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "asd GUEST"

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 842.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Button" to="." method="_on_hover_enter"]
[connection signal="mouse_exited" from="Button" to="." method="_on_hover_exit"]
[connection signal="pressed" from="Button" to="." method="_on_click"]
